--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,6 +16,7 @@
             <div><a href="/">Home</a> </div>
             <div><a href="/assessment">Assessment</a> </div>
             <div><a href="/players">Players</a> </div>
+            <div><a href="/stats/dashboard">Stats</a> </div>
         </div>
         <div>Settings</div>
     </header>
