--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,6 +17,7 @@
             <div><a href="/assessment">Assessment</a> </div>
             <div><a href="/players">Players</a> </div>
             <div><a href="/stats/dashboard">Stats</a> </div>
+            <div><a href="/courses">Courses</a> </div>
         </div>
         <div>Settings</div>
     </header>
