--- a/src/templates/courses/list.html
+++ b/src/templates/courses/list.html
@@ -7,39 +7,27 @@
         <h1 class="text-2xl md:text-3xl text-gray-800 dark:text-gray-100 font-bold">Courses</h1>
     </div>
 </div>
-<div class="bg-white dark:bg-gray-800 shadow-sm rounded-xl">
-    <header class="px-5 py-4">
-        <h2 class="font-semibold text-gray-800 dark:text-gray-100">All Courses <span class="text-gray-400 dark:text-gray-500 font-medium">248</span></h2>
-    </header>
-<div x-data="handleSelect">
 
-<!-- Table -->
-<div class="overflow-x-auto">
-<table class="table-auto w-full dark:text-gray-300">
-    <!-- Table header -->
-     
-    <thead class="text-xs font-semibold uppercase text-gray-500 dark:text-gray-400 bg-gray-50 dark:bg-gray-900/20 border-t border-b border-gray-100 dark:border-gray-700/60">
-        <tr>
-            <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                <div class="font-semibold text-left">Title</div>
-            </th>
-            <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                <div class="font-semibold text-left">Description</div>
-            </th>  
-        </tr>   
-    </thead>
-    <!-- Table body -->
-    <tbody class="text-sm divide-y divide-gray-100 dark:divide-gray-700/60">
+
+
+<div class="grid grid-cols-12 gap-6">
         {% for course in courses %}
-        <tr>
-            <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                <div class="flex items-center">
-                    <div class="font-medium text-gray-800 dark:text-gray-100">{{course.title}}</div>
+            <div class="col-span-full sm:col-span-6 xl:col-span-3 bg-white dark:bg-gray-800 shadow-sm rounded-xl p-4">
+                <div class="flex flex-col h-full">
+                    <header>                
+
+                        <div class="text-center">
+                            <a class="inline-flex text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-white" href="#0">
+                                <h2 class="text-xl leading-snug justify-center font-semibold">{{course.title}}</h2>
+                            </a>
+                        </div>
+                    </header>
+                   
+                    <div class="text-center mt-2">
+                        <div class="text-sm">{{course.description}}</div>
+                    </div>
                 </div>
-            </td>
-            <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                <div class="text-left">{{course.desciption}}</div>
-            </td>
-        </tr>
+            </div>
         {% endfor %}
+</div>
 {% endblock content %}
