--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,7 +14,7 @@
         <div>Optimum Golf</div>
         <div class="flex justify-between gap-4">
             <div><a href="/">Home</a> </div>
-            <div><a href="/assessment">Assessment</a> </div>
+            <div><a href="/assessments/dashboard">Assessments</a> </div>
             <div><a href="/players">Players</a> </div>
             <div><a href="/stats/dashboard">Stats</a> </div>
             <div><a href="/courses">Courses</a> </div>
