--- a/src/templates/courses/list.html
+++ b/src/templates/courses/list.html
@@ -14,8 +14,9 @@
         {% for course in courses %}
             <div class="col-span-full sm:col-span-6 xl:col-span-3 bg-white dark:bg-gray-800 shadow-sm rounded-xl p-4">
                 <div class="flex flex-col h-full">
-                    <header>                
-
+                    <header>        
+                    
+                        <img src="{{course.get_display_image}}" width="750" />
                         <div class="text-center">
                             <a class="inline-flex text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-white" href="#0">
                                 <h2 class="text-xl leading-snug justify-center font-semibold">{{course.title}}</h2>
