--- a/src/templates/courses/list.html
+++ b/src/templates/courses/list.html
@@ -12,23 +12,8 @@
 
 <div class="grid grid-cols-12 gap-6">
         {% for course in courses %}
-            <div class="col-span-full sm:col-span-6 xl:col-span-3 bg-white dark:bg-gray-800 shadow-sm rounded-xl p-4">
-                <div class="flex flex-col h-full">
-                    <header>        
-                    
-                        <img src="{{course.get_display_image}}" width="750" />
-                        <div class="text-center">
-                            <a class="inline-flex text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-white" href="#0">
-                                <h2 class="text-xl leading-snug justify-center font-semibold">{{course.title}}</h2>
-                            </a>
-                        </div>
-                    </header>
-                   
-                    <div class="text-center mt-2">
-                        <div class="text-sm">{{course.description}}</div>
-                    </div>
-                </div>
-            </div>
+            {% include 'components/card.html' with course=course %}
+            
         {% endfor %}
 </div>
 {% endblock content %}
